attempted fix for leftnav layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ nav a, nav a:visited, a.nav, a.nav:visited {
 #posts {
   width: 745px;
   display: inline-block;
-  margin: 30px 0 0 65px;
+  margin: 30px 0 0 0;
 }
 
 h2.tag {
@@ -132,8 +132,8 @@ footer a, footer a:visited {
 
 #leftcol {
   float: left;
-  width: 250px;
-  margin-top: 30px;
+  width: 270px;
+  margin: 30px 45px 0 0;
 }
 
 #leftcol > div {
@@ -142,13 +142,12 @@ footer a, footer a:visited {
 }
 
 #leftcol #pic img {
-  width: inherit;
+  width: 250px;
   margin-bottom: -5px;
 }
 
 #leftcol #pic {
   position: absolute;
-  width: inherit;
 }
 
 #leftcol #pic a.nav {
